--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,11 +7,18 @@
   <h3 class="text-muted">eventBudgetApp</h3>
 </div>
 
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+<div class="jumbotron" data-ng-controller="MainCtrl">
+
+  <h1>Event Budgeting</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <!-- <img src="images/yeoman.png" alt="I'm Yeoman"><br>-->
+    <ul>
+
+        <li data-ng-repeat="item in testdata">
+          {{ item.name + '- Expected: $' + item.estcost + '; Actual: $' + item.actcost + '; Difference: $'}}  
+          {{item.actcost - item.estcost}}
+        </li>
+    </ul> 
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
 </div>
@@ -32,5 +39,5 @@
 </div>
 
 <div class="footer">
-  <p>♥ from the Yeoman team</p>
+  <p>λ from the Yeoman team</p>
 </div>
