--- a/app/views/edit.html
+++ b/app/views/edit.html
@@ -7,21 +7,33 @@
   <h3 class="text-muted">eventBudgetApp</h3>
 </div>
 
-<div class="jumbotron" data-ng-controller="MainCtrl">
+<h1>Event Budgeting</h1>
+<h3>Edit Item</h3>
+<p class="lead">
+  <!-- <img src="images/yeoman.png" alt="I'm Yeoman"><br>-->
+  <!-- {{testData[id]}} .-->
 
-  <h1>Event Budgeting</h1>
-  <p class="lead">
-    <!-- <img src="images/yeoman.png" alt="I'm Yeoman"><br>-->
-    <ul>
+<form role="form">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" id="name" ng-model="name">
+  </div>
+  <div class="form-group">
+    <label for="estcost">Estimated Cost</label>
+    <input type="text" class="form-control" id="estcost" ng-model="estcost">
+  </div>
+      <div class="form-group">
+    <label for="name">Actual Cost</label>
+    <input type="text" class="form-control" id="actcost" ng-model="actcost">
+  </div>
+      <div class="form-group">
+    <label for="name">Quantity</label>
+    <input type="text" class="form-control" id="quantity" ng-model="quantity">
+  </div>
+</form>
 
-        <li data-ng-repeat="item in testdata">
-          {{ item.name + '- Expected: $' + item.estcost + '; Actual: $' + item.actcost + '; Difference: $'}}  
-          {{item.actcost - item.estcost}}
-        </li>
-    </ul> 
-  </p>
-  <p><a class="btn btn-lg btn-success" href="#">Save</a></p>
-</div>
+</p>
+<p><a class="btn btn-lg btn-success" href="#">Save</a></p>
 
 <div class="footer">
   <p>λ from the Chris</p>
