--- a/app/views/insert.html
+++ b/app/views/insert.html
@@ -7,26 +7,67 @@
   <h3 class="text-muted">eventBudgetApp</h3>
 </div>
 
-<div class="jumbotron" data-ng-controller="MainCtrl">
+<h1>Event Budgeting</h1>
+<h3>New Item</h3>
+<p class="lead">
+  <!-- <img src="images/yeoman.png" alt="I'm Yeoman"><br>-->
 
-  <h1>Event Budgeting</h1>
-  <p class="lead">
-    <!-- <img src="images/yeoman.png" alt="I'm Yeoman"><br>-->
-    Name: <input type="text" ng-model="name" /> <br />
-    Est. Cost: <input type="text" ng-model="estcost" /> <br />
-    Act. Cost: <input type="text" ng-model="actcost" /> <br />
-    Quantity: <input type="text" ng-model="quantity" /> <br />
-    <ul>
-        <li data-ng-repeat="item in testData">
-          {{ item.name + '- Expected: $' + item.estcost + '; Actual: $' + item.actcost + '; Difference: $'}}  
-          {{item.actcost - item.estcost}}
-        </li>
-        
-    </ul> 
-  </p>
-  <p><button class="btn btn-lg btn-success" ng-click="newItem()">Add</a></p>
+  <form role="form">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" id="name" placeholder="Item" ng-model="name">
+    </div>
+    <div class="form-group">
+      <label for="estcost">Estimated Cost</label>
+      <input type="text" class="form-control" id="estcost" placeholder="0" ng-model="estcost">
+    </div>
+        <div class="form-group">
+      <label for="name">Actual Cost</label>
+      <input type="text" class="form-control" id="actcost" placeholder="0" ng-model="actcost">
+    </div>
+        <div class="form-group">
+      <label for="name">Quantity</label>
+      <input type="text" class="form-control" id="quantity" placeholder="1" ng-model="quantity">
+    </div>
+  </form>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <td>
+        Name
+      </td>
+      <td>
+        Estimated Cost
+      </td>
+      <td> 
+        Actual Cost
+      </td>
+      <td> 
+        Difference
+      </td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr data-ng-repeat="item in testData | orderBy:'name'">
+      <td>
+        {{ item.name }} 
+      </td>
+      <td>
+        {{ item.estcost | currency }}
+      </td>
+      <td> 
+        {{ item.actcost | currency }}
+      </td>
+      <td> 
+        {{ item.actcost - item.estcost | currency }} 
+      </td>
+    </tr>
+  </tbody>
+</table>
+</p>
+<p><button class="btn btn-lg btn-success" ng-click="newItem()">Add</button></p>
 </div>
 
-<div class="footer">
   <p>λ from the Chris</p>
 </div>
