--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,7 +18,7 @@
           Select
         </td>
         <td>
-          Name
+          Lame
         </td>
         <td>
           Estimated Cost
